[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyposixsem"
version = "0.0.1"
description = 'ctypes wrapper for POSIX shared semaphores'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-2.0-or-later"
keywords = []
authors = [
  { name = "Mathias Rav", email = "m@git.strova.dk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Mortal/pyposixsem#readme"
Issues = "https://github.com/Mortal/pyposixsem/issues"
Source = "https://github.com/Mortal/pyposixsem"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "pshm_ucase*.py",
]
